Fix forge rendering bug